--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script> 
-    <script src="js/customcamera.js"></script> 
+    <script src="cordova.js"></script>
     <script src="js/upload.js"></script> 
 
     <script src="js/app.js"></script>
@@ -37,7 +36,10 @@
               </div>
 
               <form ng-submit="submit()" ng-controller="LoginForm">
-                  <div align="center" class="msg" id="msghome">{{msg}}</div>
+                  <div align="center" class="msg" id="msghome" ng-model="checked">
+                    <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner>{{msg}}
+                  </div>
+
                   <ion-list>
                       <label class="item item-input">
                           <span class="input-label">Usuário</span>
@@ -67,7 +69,9 @@
 
             <form ng-submit="submitcadastro()" ng-controller="CadastroForm">
                 <ion-list>
-                    <div align="center" class="msg" id="msgcadastro">{{msg}}</div>
+                    <div align="center" class="msg" id="msgcadastro" ng-model="checked">
+                      <ion-spinner icon="lines" class="spinner-calm" ng-show="checked"></ion-spinner>{{msg}}
+                    </div>
                     <label class="item item-input">
                         <span class="input-label">Nome</span>
                         <input type="text" placeholder="" ng-model="user">
@@ -75,6 +79,10 @@
                     <label class="item item-input">
                         <span class="input-label">Email</span>
                         <input type="email" placeholder="" ng-model="email">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Celular</span>
+                        <input type="text" placeholder="" ng-model="phone">
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Senha</span>
