--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,12 @@
     <title>Papudinho</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="js/upload.js"></script>
     <script src="js/app.js"></script>
     <script src="js/Ctrl_AddAmigo.js"></script>
     <script src="js/Ctrl_Amigos.js"></script>
@@ -27,13 +29,13 @@
     <script src="js/Ctrl_Sidebar.js"></script>
     <script src="js/Dir_fileModel.js"></script>
     <script src="js/funcoes.js"></script>
-    <script src="js/upload.js"></script>
-
+    
   </head>
   <body ng-app="app" >
 
     <ion-nav-bar class="bar-royal">
-      <ion-nav-back-button>Voltar
+      <ion-nav-back-button class="voltar">
+        <i class="ion-chevron-left"></i> Voltar
       </ion-nav-back-button>
     </ion-nav-bar>
 
@@ -55,7 +57,7 @@
 
                   <ion-list>
                       <label class="item item-input">
-                          <span class="input-label">Usuário</span>
+                          <span class="input-label">Email</span>
                           <input id="usuario" name="usuario" type="email" placeholder=""  ng-model="email" >
                       </label>
                       <label class="item item-input">
