--- a/www/index.html
+++ b/www/index.html
@@ -101,6 +101,10 @@
                         <input type="text" placeholder="" ng-model="phone">
                     </label>
                     <label class="item item-input">
+                        <span class="input-label">CPF</span>
+                        <input type="text" placeholder="" ng-model="cpf">
+                    </label>
+                    <label class="item item-input">
                         <span class="input-label">Senha</span>
                         <input type="password" placeholder="" ng-model="password">
                     </label>
