--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
       <ion-view title="Papudinho" class="login">
           <ion-nav-bar class="bar-positive"></ion-nav-bar> 
           <ion-content padding="true" class="has-header login">
-              <div style="border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; background-color: rgb(255, 255, 255);">
+              <div style="border: 0px; text-align: center; background-color: rgb(159,195,231);">
                   <img src='img/Papudim.jpg' width="150px" style="vertical-align: middle;" class="login">
                 <!-- <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i> -->
               </div>
@@ -61,16 +61,16 @@
 
                   <ion-list>
                       <label class="item item-input">
-                          <span class="input-label">Email</span>
-                          <input id="usuario" name="usuario" type="email" placeholder=""  ng-model="email" >
+                          <input id="usuario" name="usuario" type="email" placeholder="Usuário"  ng-model="email" >
                       </label>
                       <label class="item item-input">
-                          <span class="input-label">Senha</span>
-                          <input id="senha" name="senha" type="password" placeholder="" ng-model="senha" >
+                          <input id="senha" name="senha" type="password" placeholder="Senha" ng-model="senha" >
                       </label>
                   </ion-list>
-                  <div class="spacer" style="height: 40px;"></div>
-                  <input type="submit" id="submit" value="Entrar" class="button button-stable button-block" />
+                  <button class="button  button-energized button-block ">
+                    <i class="button button-icon icon ion-checkmark-round" ></i>Entrar
+                  </button>
+                  
                   <div align="center">
                     <a href="#/signup" class="button button-positive button-clear">Criar Conta</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
